fix text color for warning info on IE8

--- a/core/css/styles.css
+++ b/core/css/styles.css
@@ -980,7 +980,8 @@ button.loading {
 }
 /* disable opacity of info text on gradient
    sice we cannot set a good backround color to use the filter&background hack as with the input labels */
-.lte9 #body-login p.info {
+.lte9 #body-login p.info,
+.lte9 #body-login .warning-info {
 	filter: initial;
 }
 /* deactivate show password toggle for IE. Does not work for 8 and 9+ have their own implementation. */
